# auto-commit-message

./: Cargo.toml
src/: main.rs
