[package]
name = "commit-message-creator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
clap = "4.0"                                        # for CLI arguments
dotenv = "0.15"                                     # for loading environment variables
